to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Work in progress
================

12/16/2001:mkoeppe
	   [Guile]: Fixed macros %values_as_list, %values_as_vector,
	   %multiple_values to use the proper %pragma syntax.  New
	   Guile example/test "multivalue"; new Guile run-test for
	   test-suite item "list-vector" (currently broken).

12/14/2001:mkoeppe
	   [Guile]: Fixed typemap-substition bug for "varin".  Relaxed
	   valid-identifier check to allow all R5RS identifiers.


Version 1.3.10 (December 10, 2001)
==================================

12/08/2001:beazley
           Modified %typemap so that %{ ... %} can also be used as a
           code block (mostly for completeness).  For example:
 
              %typemap(in) blah %{
                 ...
              %}

           This form does not introduce a new block scope.  Also, the
           code enclosed in %{ ... %} is not processed by the preprocessor.

12/08/2001:beazley
           Fixed [ #459614 ] SWIG with multiple TCL interpreters.

12/08/2001:beazley
           Fixed [ #417141 ] rubydec.swg is wrong
           Reported by Paul Brannan.

12/08/2001:beazley
           Fixed [ #410557 ] Problem with %addmethods on NT.
           Reported by Magnus Ljung.

12/08/2001:beazley
           Fixed [ #445233 ] Enhancement: handle access change.
           SWIG now parses (but ignores) C++ access changes for the
           the following:

             class A {
             protected:
                void something() { }
             public:
                A() {}
             };

             class B : private A {
             public:
                B() : A() { }
             protected:
                A::something;    <---- Parsed, but ignored